Adel: eleve/evaluations

--- a/app/eleve/pages/evaluations/historique.html
+++ b/app/eleve/pages/evaluations/historique.html
@@ -21,7 +21,8 @@
                                 <tr>
                                     <th>Référence</th>
                                     <th>Cours</th>
-                                    <th>Date de fin de correction</th>
+                                    <th>Note finale</th>
+                                    <th>Note attribuée</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -29,31 +30,37 @@
                                     <td>Mark</td>
                                     <td>Otto</td>
                                     <td>@mdo</td>
+                                    <td>10</td>
                                 </tr>
                                 <tr>
                                     <td>Jacob</td>
                                     <td>Thornton</td>
                                     <td>@fat</td>
+                                    <td>10</td>
                                 </tr>
                                 <tr>
                                     <td>Larry</td>
                                     <td>the Bird</td>
                                     <td>@twitter</td>
+                                    <td>10</td>
                                 </tr>
                                 <tr>
                                     <td>Mark</td>
                                     <td>Otto</td>
                                     <td>@mdo</td>
+                                    <td>10</td>
                                 </tr>
                                 <tr>
                                     <td>Jacob</td>
                                     <td>Thornton</td>
                                     <td>@fat</td>
+                                    <td>10</td>
                                 </tr>
                                 <tr>
                                     <td>Larry</td>
                                     <td>the Bird</td>
                                     <td>@twitter</td>
+                                    <td>10</td>
                                 </tr>
                                 </tbody>
                             </table>
