--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
     <script src="app/enseignant/pages/enseignant_controller.js"></script>
 
     <script src="app/eleve/pages/eleve_controller.js"></script>
+    <script src="app/eleve/pages/evaluations/evaluations_controller.js"></script>
+    <script src="app/eleve/pages/resultats/resultats_controller.js"></script>
+    <script src="app/eleve/pages/groupes/groupes_controller.js"></script>
+
 
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 
