--- a/app/enseignant/pages/evaluations/evaluation-create2.html
+++ b/app/enseignant/pages/evaluations/evaluation-create2.html
@@ -6,21 +6,51 @@
         <!-- /.col-lg-12 -->
 
         <script>
-            $('input[type="checkbox"]').on('change', function() {
-                $('input[name="' + this.name + '"]').not(this).prop('checked', false);
-            });
+            function allowDrop(ev) {
+                ev.preventDefault();
+            }
+            var src = "";
+            var current = "drag1";
+            function drag(ev) {
+                ev.dataTransfer.setData("text", ev.target.id);
+                src = ev.srcElement.parentNode.id;
+                document.getElementById('drag1').style.borderStyle = "dashed";
+                document.getElementById('drag1').style.borderColor = "#C0C0C0";
+
+            }
+
+            function drop(ev) {
+                console.log(ev.target.id)
+
+                document.getElementById('drag1').style.borderStyle = "none";
+
+                if(true) {
+                    ev.preventDefault();
+                    var data = ev.dataTransfer.getData("text");
+
+                    document.getElementById(current).getElementsByClassName("panel-body panel_principal")[0]
+                            .className="panel-body panel_secondaire";
+                    document.getElementById(current).setAttribute("draggable","true");
+                    document.getElementById(current).setAttribute("ondragstart","drag(event)");
+                    document.getElementById(src).appendChild(document.getElementById(current));
+
+                    document.getElementById(data).getElementsByClassName("panel-body panel_secondaire")[0]
+                            .className="panel-body panel_principal";
+                    document.getElementById(data).setAttribute("draggable","");
+                    document.getElementById(data).setAttribute("ondragstart","");
+                    document.getElementById("drag1").appendChild(document.getElementById(data));
+
+                    current = data;
+                }
+            }
+
+
         </script>
 
-    <!-- /.row -->
+
+        <!-- /.row -->
     <div class="row">
         <br><br>
-
-        <script>
-            $(".dropdown-menu li a").click(function(){
-                $(this).parents(".dropdown").find('.btn').html($(this).text() + ' <span class="caret"></span>');
-                $(this).parents(".dropdown").find('.btn').val($(this).data('value'));
-            });
-        </script>
 
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -29,27 +59,63 @@
             <!-- /.panel-heading -->
             <div class="panel-body">
                 <div ng-repeat="section in evaluation.sections">
-                    <div class="panel panel-default">
+                    <div class="panel panel-default" id="drag1" draggable="" ondragstart="" ondrop="drop(event)" ondragover="allowDrop(event)">
                         <div class="panel-heading">
                             {{section.nom}}
+                            <a class="btn btn-danger btn-circle-micro pull-right" data-toggle="modal" data-target="#modalDeleteSection"><i class="fa fa-times"></i>
+                            </a>
+                            <a class="btn btn-primary btn-circle-micro pull-right" href="javascript:$('#myModal .modal-body').load('remote.html',function(e){$('#myModal').modal('show');});"><i class="fa fa-list"></i>
+                            </a>
+
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
-                            <h4>Type de rendu : </h4>{{section.typeRendu}}, {{section.extension}}
+                            <h4>Type de rendu : </h4>{{section.typeRendu}} &nbsp;{{section.extension}}
+                            <br><br>
+                            <h4>Contenu:</h4>
+                            {{section.contenu}}
                             <br><br>
                             <h4>Critères d'évaluation:</h4>
-                            <div ng-repeat="critere in section.criteres">
-                                <div> Type: {{critere.type}} </div>
-                                <div ng-show="critere.type=='condition'"> Condition: {{critere.condition}}</div>
-                                <div ng-show="critere.type=='condition'"> Nombre de points: {{critere.points}}</div>
-                                <div ng-show="critere.type=='jugement'"> Description: {{critere.description}} </div>
-                                <div  ng-show="critere.type=='jugement'"> Nombre de points: {{critere.points}}</div>
-                                <div ng-show="critere.type=='jugement'"> Précision: {{critere.precision}}</div>
-
-                                <br>
+                            <div class="table-responsive">
+                            <table id="table" class="table table-striped table-bordered table-hover">
+                                <thead>
+                                <tr><th class="index">#</th><th>Type</th></th><th>Description</th><th>Points</th><th>Precision</th></tr>
+                                </thead>
+                                <tbody>
+                                    <tr ng-repeat="critere in section.criteres">
+                                        <td class="index">{{critere.position}}</td>
+                                        <td>{{critere.type}}</td>
+                                        <td>{{critere.description}}</td>
+                                        <td>{{critere.points}}</td>
+                                        <td>{{critere.precision}}</td>
+                                    </tr>
+                                </tbody>
+                            </table>
                             </div>
-                            <br>
-                            <button class="btn btn-primary center-block" data-toggle="modal" data-target="#modalCritere">Ajouter un critère d'évaluation</button>
+
+
+                            <script>
+                                var fixHelperModified = function(e, tr) {
+                                            var $originals = tr.children();
+                                            var $helper = tr.clone();
+                                            $helper.children().each(function(index) {
+                                                $(this).width($originals.eq(index).width())
+                                            });
+                                            return $helper;
+                                        },
+                                        updateIndex = function(e, ui) {
+                                            $('td.index', ui.item.parent()).each(function (i) {
+                                                $(this).html(i + 1);
+                                            });
+                                        };
+
+                                $("#table tbody").sortable({
+                                    helper: fixHelperModified,
+                                    stop: updateIndex
+                                }).disableSelection();
+                            </script>
+                            <br><br>
+                            <button class="btn btn-primary" data-toggle="modal" data-target="#modalCritere">Ajouter un critère d'évaluation</button>
                         </div>
                     </div>
                 </div>
@@ -58,15 +124,16 @@
             </div>
 
     </div>
-
+        <input type="submit" class="btn btn-primary pull-right" ui-sref="enseignant.createEvaluation.etape3" placeholder="Créer l'évaluation" />
 
         <!-- Modal content-->
         <div id="myModal" class="modal fade" role="dialog">
-            <div class="modal-dialog">
+            <div class="modal-dialog centered">
 
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Ajouter une section</h4>
+                    <h4 class="modal-title" ng-show="section.nom==null">Ajouter une section</h4>
+                    <h4 class="modal-title" ng-hide="section.nom==''">{{section.nom}}</h4>
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
@@ -118,6 +185,9 @@
                         <br>
                         Nombre de points pour la section:
                         <input type="number" step="0.1" min="0" ng-model="section.points"/>
+                        <br><br>
+                        Contenu de l'évaluation :
+                        <input type="file" ng-model="section.contenu"/>
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -129,7 +199,7 @@
 
 
         <div id="modalCritere" class="modal fade" role="dialog">
-            <div class="modal-dialog">
+            <div class="modal-dialog centered">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h4 class="modal-title">Ajouter un critère d'évaluation</h4>
@@ -149,17 +219,39 @@
                                 <a href="" id="condition" ng-click="setCritereType(2)">Condition</a>
                             </li>
                             <li>
-                                <a href="" id="jugement" ng-click="setCritereType(3)">Texte</a>
+                                <a href="" id="jugement" ng-click="setCritereType(3)">Jugement</a>
                             </li>
                         </ul>
                     </div>
 
+                    <div ng-show="critere==1">
+                        <br>
+                        Condition : <textarea ng-model=section.critere.description type="text" placeholder="Condition" />
+                        <br><br>
+                    </div>
+
+                    <div ng-show="critere==2">
+                        <br>
+                        Condition : <textarea ng-model=section.critere.description type="text" placeholder="Condition" />
+                        <br><br>
+                        Nombre de points: <input type="number" ng-model=section.critere.points step="0.1" min="0" max="{{section.points}}"/>
+                    </div>
+
+                    <div ng-show="critere==3">
+                        <br>
+                        Description : <textarea ng-model=section.critere.description placeholder="Description" />
+                        <br><br>
+                        Nombre de points: <input ng-model=section.critere.points type="number" step="0.1" min="0" max="{{section.points}}"/>
+                        <br>
+                        Précision: <input ng-model=section.critere.precision type="number" step="0.01" min="0" max="1"/>
+                    </div>
+
+                </div>
                 <div class="modal-footer">
                     <button type="submit" class="btn btn-default" ng-click="createCritere(section.id)" data-dismiss="modal">Ajouter</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
                 </div>
             </div>
-        </div>
         </div>
 
 </div>
@@ -167,4 +259,5 @@
 
 </div>
 <!-- /#page-wrapper -->
+
 </div>
