Adel: eleve/evaluations

--- a/app/enseignant/pages/evaluations/evaluation-create.html
+++ b/app/enseignant/pages/evaluations/evaluation-create.html
@@ -42,8 +42,8 @@
                         <!-- /.panel-heading -->
                         <div class="panel-body">
 
-                            <input type="checkbox" name="groupe">Travail individuel&nbsp&nbsp&nbsp&nbsp</input>
-                            <input type="checkbox" name="groupe">Travail de groupe</input>
+                            <input type="checkbox" name="groupe">&nbsp;Travail individuel&nbsp&nbsp&nbsp&nbsp</input>
+                            <input type="checkbox" name="groupe">&nbsp;Travail de groupe</input>
                             <br><br>
                                 Date limite de rendu du devoir:
                             <input type="date" name="renduDate" />
@@ -63,8 +63,8 @@
                             </script>
 
                                 Type de rendu:
-                            <input type="checkbox" name="rendu">A la volée <span class="glyphicon glyphicon-info-sign" data-toggle="popover" title="A la volée" data-content="L'élève peut corriger les copies des autres après avoir rendu la sienne."></span> &nbsp&nbsp </input>
-                            <input type="checkbox" name="rendu">Par étape <span class="glyphicon glyphicon-info-sign" data-toggle="popover" title="Par étape" data-content="L'élève peut corriger les copies des autres uniquement après la date limite de rendu des copies."></span></input>
+                            <input type="checkbox" name="rendu">&nbsp;A la volée <span class="glyphicon glyphicon-info-sign" data-toggle="popover" title="A la volée" data-content="L'élève peut corriger les copies des autres après avoir rendu la sienne."></span> &nbsp&nbsp </input>
+                            <input type="checkbox" name="rendu">&nbsp;Par étape <span class="glyphicon glyphicon-info-sign" data-toggle="popover" title="Par étape" data-content="L'élève peut corriger les copies des autres uniquement après la date limite de rendu des copies."></span></input>
                             </div>
                         </div>
                         <!-- /.panel-body -->
@@ -90,12 +90,12 @@
                         </div>
                         <br> <br>
                         Auto-évaluation:
-                        <input type="checkbox" name="auto">Non&nbsp </input>
-                        <input type="checkbox" name="auto">Facultative&nbsp </input>
-                        <input type="checkbox" name="auto">Obligatoire&nbsp </input>
+                        <input type="checkbox" name="auto">&nbsp;Non&nbsp;</input>
+                        <input type="checkbox" name="auto">&nbsp;Facultative&nbsp;</input>
+                        <input type="checkbox" name="auto">&nbsp;Obligatoire&nbsp;</input>
                         <br><br>
-                        <input type="checkbox" name="anonymatEleve">Anonymat de l'élève évalué&nbsp</input>
-                        <input type="checkbox" name="anonymatEvaluateur">Anonymat de l'élève évaluateur</input>
+                        <input type="checkbox" name="anonymatEleve">&nbsp;Anonymat de l'élève évalué&nbsp</input>
+                        <input type="checkbox" name="anonymatEvaluateur">&nbsp;Anonymat de l'élève évaluateur</input>
 
                     </div>
                 </div>
