--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <script src="app/navbar/navbar.directive.js"></script>
     <script src="app/services/eleves_service.js"></script>
     <script src="app/services/enseignants_service.js"></script>
+    <script src="app/services/evaluations_service.js"></script>
     <script src="app/services/groupes_service.js"></script>
     <script src="app/services/cours_service.js"></script>
     <script src="app/services/httpq.js"></script>
