--- a/app/enseignant/pages/evaluations/evaluation-create2.html
+++ b/app/enseignant/pages/evaluations/evaluation-create2.html
@@ -16,18 +16,18 @@
             </div>
             <!-- /.panel-heading -->
             <div class="panel-body">
-                <div ng-repeat="section in evaluation.sections | orderBy : 'position'">
+                <div ng-repeat="section in sectionList | orderBy : 'ordre'">
 
-                    <div class="panel {{panelColor[$id%4]}}">
+                    <div class="panel {{panelColor[($id)%4]}}">
                         <div class="panel-heading">
-                            {{section.nom}}
+                            {{section.ordre+"- "+section.nom}}
                             <a class="btn btn-danger btn-circle-micro pull-right" data-toggle="modal" data-target="#modalDeleteSection"><i class="fa fa-times"></i>
                             </a>
                             <a class="btn btn-primary btn-circle-micro pull-right" href="javascript:$('#myModal .modal-body').load('remote.html',function(e){$('#myModal').modal('show');});"><i class="fa fa-list"></i>
                             </a>
-                            <a class="btn btn-success btn-circle-micro pull-right" ng-click="sectionUp(section.position, evaluation.sections)"><i class="fa fa-angle-up"></i>
+                            <a class="btn btn-success btn-circle-micro pull-right" ng-click="sectionUp(section.ordre, sectionList)"><i class="fa fa-angle-up"></i>
                             </a>
-                            <a class="btn btn-success btn-circle-micro pull-right" ng-click="sectionDown(section.position, evaluation.sections)"><i class="fa fa-angle-down"></i>
+                            <a class="btn btn-success btn-circle-micro pull-right" ng-click="sectionDown(section.ordre, sectionList)"><i class="fa fa-angle-down"></i>
                             </a>
                         </div>
                         <!-- /.panel-heading -->
@@ -94,33 +94,33 @@
 
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title" ng-show="section.nom==null">Ajouter une section</h4>
-                    <h4 class="modal-title" ng-hide="section.nom==''">{{section.nom}}</h4>
+                    <h4 class="modal-title" ng-show="newSection.nom==null">Ajouter une section</h4>
+                    <h4 class="modal-title" ng-hide="newSection.nom==''">{{newSection.titre}}</h4>
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
-                        <input type="text"class="form-control" ng-model=section.nom id="nom" placeholder="Nom de la section"/>
+                        <input type="text"class="form-control" ng-model=newSection.titre id="titre" placeholder="Titre de la section"/>
                         <br>
                         <div class="btn-group">
 
-                        <div class="dropdown">
-                            <button class="btn btn-default dropdown-toggle" type="button" id="dropdown-menu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                <span class="hidden-xl">Type de rendu</span>
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" ng-model="section.typeRendu" aria-labelledby="dropdownMenu1" role="menu">
-                                <li>
-                                    <a ng-click="setFile(false)" id="lien" href="">Lien</a>
-                                </li>
-                                <li>
-                                    <a ng-click="setFile(true)" id="file" >Fichier</a>
-                                </li>
-                                <li>
-                                    <a ng-click="setFile(false)" id="text" href="">Texte</a>
-                                </li>
-                            </ul>
-                        </div>
+                            <div class="dropdown">
+                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdown-menu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                    <span class="hidden-xl">Type de rendu</span>
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" ng-model="newSection.type_rendu" aria-labelledby="dropdownMenu1" role="menu">
+                                    <li>
+                                        <a ng-click="setFile(false)" id="lien" href="">Lien</a>
+                                    </li>
+                                    <li>
+                                        <a ng-click="setFile(true)" id="file" >Fichier</a>
+                                    </li>
+                                    <li>
+                                        <a ng-click="setFile(false)" id="text" href="">Texte</a>
+                                    </li>
+                                </ul>
                             </div>
+                        </div>
                         <br>
                         <div ng-show="file" class="dropdown">
                             <div class="btn-group">
@@ -146,14 +146,14 @@
                         </input>
                         <br>
                         Nombre de points pour la section:
-                        <input type="number" step="0.1" min="0" ng-model="section.points"/>
+                        <input type="number" step="0.1" min="0" ng-model="newSection.points"/>
                         <br><br>
                         Contenu de l'évaluation :
-                        <input type="file" ng-model="section.contenu"/>
+                        <input type="file" ng-model="newSection.enonce"/>
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-default" data-dismiss="modal">Ajouter</button>
+                    <button type="submit" class="btn btn-default" data-dismiss="modal" ng-click="addSection()">Ajouter</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
                 </div>
             </div>
